--- a/.github/workflows/generator-android.yml
+++ b/.github/workflows/generator-android.yml
@@ -151,7 +151,7 @@ jobs:
           url: ${{ env.STATUS_URL }}
           method: 'POST'
           customHeaders: '{"Content-Type": "application/json"}'
-          data: '{"uuid": "${{ inputs.uuid }}", "status": "5% complete"}'
+          data: '{"uuid": "${{ inputs.uuid }}", "status": "5%  "}'
 
       - name: Install dependencies
         run: |
@@ -422,7 +422,7 @@ jobs:
           url: ${{ env.STATUS_URL }}
           method: 'POST'
           customHeaders: '{"Content-Type": "application/json"}'
-          data: '{"uuid": "${{ inputs.uuid }}", "status": "35% complete"}'
+          data: '{"uuid": "${{ inputs.uuid }}", "status": "35%  "}'
 
       - name: replace flutter icons
         if: ${{ inputs.iconlink != 'false' }}
@@ -477,7 +477,7 @@ jobs:
           url: ${{ env.STATUS_URL }}
           method: 'POST'
           customHeaders: '{"Content-Type": "application/json"}'
-          data: '{"uuid": "${{ inputs.uuid }}", "status": "45% complete"}'
+          data: '{"uuid": "${{ inputs.uuid }}", "status": "45%  "}'
 
       - name: icons
         if: ${{ inputs.iconlink != 'false' }}
@@ -556,7 +556,7 @@ jobs:
           url: ${{ env.STATUS_URL }}
           method: 'POST'
           customHeaders: '{"Content-Type": "application/json"}'
-          data: '{"uuid": "${{ inputs.uuid }}", "status": "75% complete"}'
+          data: '{"uuid": "${{ inputs.uuid }}", "status": "75%  "}'
       
       - uses: r0adkll/sign-android-release@v1
         name: Sign app APK
